@startuml

title __ASSIGNMENT 3's Class Diagram__\n

  package  {
    class Datas {
    }
  }
  

  package  {
    class Nodes {
    }
  }
  

  package  {
    abstract class Tree {
    }
  }
  

  package  {
    class TwoThree {
    }
  }
  

  package  {
    class myQueue {
    }
  }
  

  Datas o-- Datas : next
  Nodes o-- Nodes : parent
  Tree o-- Nodes : Root
  Tree o-- myQueue : queue
  TwoThree -up-|> Tree
  myQueue o-- Datas : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
